added minnyscript logo and some small css tweaks

--- a/src/layouts/all.sass
+++ b/src/layouts/all.sass
@@ -1,7 +1,7 @@
 @import "~bulma/sass/utilities/initial-variables"
 
 // Config
-$kaldi-red: #FD461E
+$kaldi-red: #30a1db
 $kaldi-red-invert: #fff
 
 $primary: $kaldi-red
@@ -25,3 +25,9 @@ $primary-invert: $kaldi-red-invert
   margin-top: 0 !important
 
 @import "~bulma"
+
+a
+  color: #30a1db
+
+nav
+  margin-top: 1em
