--- a/src/layouts/all.sass
+++ b/src/layouts/all.sass
@@ -31,3 +31,8 @@ a
 
 nav
   margin-top: 1em
+
+.content h2
+  box-shadow: #8bd0f3 -1rem -12px 0px, #195e82 0.8rem 7px 0px !important
+  background-color: #30a1db !important
+
