new colors for navbar hover state

--- a/src/layouts/all.sass
+++ b/src/layouts/all.sass
@@ -36,3 +36,6 @@ nav
   box-shadow: #8bd0f3 -1rem -12px 0px, #195e82 0.8rem 7px 0px !important
   background-color: #30a1db !important
 
+a.navbar-item:hover, a.navbar-item.is-active, a.navbar-link:hover, a.navbar-link.is-active
+  color: #30a1db
+  background-color: #e2f5ff
